--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 	"dependencies": {
 		"bootstrap": "^5.3.1",
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"mysql2": "^3.6.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
