--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"express": "^4.18.2",
 		"mysql2": "^3.6.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.20.1"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
