--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
 		"mysql2": "^3.6.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.12.0",
 		"react-router-dom": "^6.20.1"
 	},
 	"devDependencies": {
+		"@types/bootstrap": "^5.2.10",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.5.0",
